[gd_scene load_steps=2 format=3 uid="uid://ubbbcw712daj"]

[ext_resource type="Script" uid="uid://fe818ig1h0xt" path="res://Spawner/spawner.gd" id="1_10h3l"]

[node name="Spawner" type="Node2D"]
script = ExtResource("1_10h3l")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="PowerupSpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="PowerupSpawnTimer" to="." method="_on_powerup_spawn_timer_timeout"]
